<resources>
    <string name="app_name">"RingDoubler"</string>
    <string name="version">"Ver:"</string>
    <string name="code">"AM-RD-V01"</string>
    <string name="action_scan">SCAN</string>
    <string name="action_stop">STOP</string>
    <string name="action_restart">Restart</string>
    <string name="action_add">+</string>
    <string name="action_reduce">-</string>

    <string name="title_activity_device_list">Devices</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="prompt_select_one">Select One</string>


    <!--************* TAB LABELS *****************-->
    <string name="label_status">Status</string>
    <string name="label_settings">Settings</string>
    <string name="label_diagnostics">Diagnostics</string>
    <string name="label_restart">Restart M/c</string>
    <string name="label_exit">Exit Application</string>

    <!--************** LABELS ************************-->
    <string name="label_operating_params">Live Operating Status</string>
    <string name="label_op_status">Status</string>
    <string name="label_stop_motor">Motor</string>
    <string name="label_stop_error">Error</string>
    <string name="label_stop_reason">Reason</string>
    <string name="label_stop_value">Value</string>

    <!--************** Bluetooth ***********************-->
    <string name="msg_bluetooth_connecting">Connecting</string>
    <string name="msg_bluetooth_not_connect">Connection Failed</string>
    <string name="msg_bluetooth_start_scanning">Scanning for Bluetooth Devices</string>
    <string name="msg_bluetooth_stop_scanning">Scanning Stopped</string>
    <string name="msg_bluetooth_connected">Connected to Bluetooth Device</string>
    <string name="msg_bluetooth_disconnected">Disconnected from Bluetooth Device</string>
    <!--******************* iDLE SCRENN ********************-->
    <string name="label_idle_doffOver">New Doff Cycle </string>

    <!--******************* Content Description *************-->
    <string name="desc_logo">Microspin Logo</string>

    <!--******************* Operation Parameters ************************-->
    <string name="label_param_1">Production - Total Output (m)</string>
    <string name="label_param_2">Layers</string>
    <string name="label_param_3">RTF</string>
    <string name="label_param_4">Spindle Speed (rpm)</string>
    <string name="label_param_5">Doff Percent (%)</string>

    <!--******************* Settings ************************-->
    <string name="label_setting_1">Input Yarn Count (Nm)</string>
    <string name="label_setting_2">Spindle Speed (rpm)</string>
    <string name="label_setting_3">Draft </string>
    <string name="label_setting_4">Twist Per Inch</string>
    <string name="label_builder">Builder</string>
    <string name="label_setting_5">Bind Wind Ratio</string>
    <string name="label_setting_6">Chase Length (mm)</string>
    <string name="label_setting_7">Preferred package size(%)</string>
    <string name="label_setting_8">Right Side On</string>
    <string name="label_setting_9">Left Side On</string>

    <string name="msg_doffSetting_reset">Doff Over! Press Start to Home</string>
    <string name="msg_setting_updated">Settings Updated</string>
    <string name="msg_setting_updating">Updating Settings</string>

    <!--************Dialog Settings String******************-->
    <string name="label_dialog_settings">M/C Outside Operating Limits!</string>
    <string name="label_dialog_autocorrect">Suggested Change to Settings </string>
    <string name="label_dialog_confirm">Confirm </string>
    <string name="label_dialog_cancel">Cancel </string>
    <!--******************* Diagnose ************************-->
    <string name="label_diagnose_type">Test Type</string>
    <string name="label_diagnose_motor_name">Motor Name</string>
    <string name="label_diagnose_ip_signal">Signal Voltage (%)</string>
    <string name="label_diagnose_run_time">Test Run Time (s)</string>
    <string name="label_diagnose_motor_maxRPM">Max Motor RPM </string>
    <string name="label_diagnose_target_rpm_percent">Target (%) </string>
    <string name="label_diagnose_target_rpm">Target RPM  </string>
    <string name="label_diagnose_live_rpm">Actual RPM </string>    
	<string name="label_diagnose_direction">Direction </string>
    <string name="label_diagnose_distance">Distance (mm)</string>
    <string name="label_diagnose_lift_msg">Lift Bed Moving </string>
    <string name="label_diagnose_lift_msgDone">Done </string>
    <string name="btn_diagnose_run">Run Diagnose</string>
    <string name="msg_diagnose_running">Running Diagnosis</string>
    <string name="msg_diagnose_lift_openLoopNOK"> Lift can only run with Close Loop!</string>
    <string name="msg_diagnose_complete_success">Diagnosis Completed Successfully</string>
    <string name="msg_diagnose_complete_fail">Diagnosis Completed. Failed to reach Target! </string>
    <string name="msg_diagnose_Incomplete">Diagnosis Completed. Motor Error!</string>
    <string name="msg_diagnose_lift_doff_err">Cant Run Lift Diagnosis until Doff Reset!</string>
    <string name="msg_halt_restart">Finish Doff?</string>

</resources>
