<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_settings"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin_dialog"
    android:paddingRight="@dimen/activity_horizontal_margin_dialog"
    android:paddingTop="@dimen/activity_top_margin_dialog"
    tools:context="machine.microspin.com.ringDoubler.DashboardRunMode">

    <ScrollView
        android:id="@+id/settingsScroll"
        style="@android:style/Widget.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setting1Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_1" />

                <EditText
                    android:id="@+id/setting1"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_weight="0"
                    android:ems="10"
                    android:inputType="number"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setting2Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_2" />

                <EditText
                    android:id="@+id/setting2"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setting3Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_3" />

                <EditText
                    android:id="@+id/setting3"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setting4Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_4" />

                <EditText
                    android:id="@+id/setting4"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setting5Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_5" />

                <EditText
                    android:id="@+id/setting5"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setting6Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_6" />

                <EditText
                    android:id="@+id/setting6"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setting7Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_7" />

                <EditText
                    android:id="@+id/setting7"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    tools:ignore="LabelFor" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
