<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:isScrollContainer="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="machine.microspin.com.ringDoubler.DashboardRunMode">

    <LinearLayout
        android:id="@+id/settingsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:isScrollContainer="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/label_settings"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/factorystngs"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:drawableStart="@android:drawable/ic_menu_manage" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_save" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/settingsScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/settingsHeader"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setting1Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_1" />

                <EditText
                    android:id="@+id/setting1"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setting2Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_2" />

                <EditText
                    android:id="@+id/setting2"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/draftLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/setting3Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_3" />

                <EditText
                    android:id="@+id/setting3"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setting4Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_4" />

                <EditText
                    android:id="@+id/setting4"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setting5Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_5" />

                <EditText
                    android:id="@+id/setting5"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setting6Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_6" />

                <EditText
                    android:id="@+id/setting6"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setting7Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_7" />

                <EditText
                    android:id="@+id/setting7"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/rightSideOnLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/setting8Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_8" />

                <EditText
                    android:id="@+id/setting8"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/leftSideOnLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/setting9Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_setting_9" />

                <EditText
                    android:id="@+id/setting9"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:ems="10"
                    android:inputType="number"
                    tools:ignore="LabelFor" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
